--- a/rand-quotes.html
+++ b/rand-quotes.html
@@ -7,7 +7,7 @@
     <title>Quotes</title>
     <link rel="shortcut icon" href="icons8-citation-96.png" type="image/x-icon">
     <link rel="stylesheet" href="bootstrap.min.css">
-    <link rel="stylesheet" href="rand-qutoes.css">
+    <link rel="stylesheet" href="rand-quotes.css">
 </head>
 <body>
 
@@ -17,7 +17,7 @@
         <a href="13-rand-quotes.html" class="mt-3 mb-3">Refresh</a>
     </div>
 
-    <script src="rand-qutoes.js"></script>
+    <script src="rand-quotes.js"></script>
     <script src="bootstrap.bundle.min.js"></script>
 </body>
 
